# kcats

./: Cargo.toml  README.md  README.org  book-of-kcats.html  book-of-kcats.org  build.rs  docs-custom.css  emacs-ide.org  export.el  kcats.org  lexicon.html  lexicon.org  lib-toolchain-env.sh  production.html  production.org  production.org_archive  project.clj  prototype.org  scratch.org  tangle.el
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  org-export.yaml
ai-model-training/: merge_model.py  model_test.sh
edn-format/src/: lib.rs
emacs/: ai-training.el  kcats-mode.el  kcats-repl-mode.el  ob-kcats.el
examples/: api.kcats  books.kcats  debug.org
proto/: kcats.proto
src/kcats/: core.clj  lexicon.kcats
