[package]
name = "kcats"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialization
edn-format = "3.3.0"
serde = "1"
serde_json = "1"

#edn-format = { path = "../edn-format" }
base64 = "0.13.0"

# String literals
internment = {version = "0.6.0", features = ["serde"]}
lazy_static = "1.4.0"

num-integer = "0.1.44"

# String format
# dyn-fmt = "0.4.0" 
dynfmt = { version = "0.1.5", features = ["curly"] }

# crypto stuff
ed25519-dalek = {version="1", features=["batch_deterministic", "std", "rand"]}
sha2 = "0.10.6"
rand_core = "0.5.1" # careful here, having 2 versions present will make weird compile errors
rand = "0.8"

# multithreading
futures = "0.3"
tokio = { version = "1", features = ["full"] }
# multiple-consumer channels
#crossbeam-channel = "0.5" # doesn't support async send/recv
#async-channel = "1.8.0"
flume = "0.11.0"

# debugging
# backtrace = "0.3.61"

# database
## Figure out best place to store the db and stdlib files
directories = "5.0"

#cozo = { version = "0.7", default-features = false, features = ["minimal", "rayon"], optional=true }
rusqlite = { version = "0.30", optional = true, features = ["uuid"] }

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
#chrono = "0.4.31"

[dev-dependencies]
test-case = "2.0.0"

[build-dependencies]
directories = "5.0"

[features]
database = ["rusqlite"]
