[package]
name = "kcats"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialization
edn-format = "3"
serde = "1"
serde_json = "1"

#edn-format = { path = "../edn-format" }
base64 = "0.22"

# String literals
internment = {version = "0.6.0", features = ["serde"]}
lazy_static = "1"

num-integer = "0"

# String format
# dyn-fmt = "0.4.0" 
dynfmt = { version = "0", features = ["curly"] }

# crypto stuff
ed25519-dalek = {version="1", features=["batch_deterministic", "std", "rand"]}
sha2 = {version="0", features=["std"]}
rand_core = "0.5.1" # careful here, having 2 versions present will make weird compile errors
rand = "0"

# multithreading
futures = "0"
tokio = { version = "1", features = ["full"] }
# multiple-consumer channels
#crossbeam-channel = "0.5" # doesn't support async send/recv
#async-channel = "1.8.0"
flume = "0"

# debugging
# backtrace = "0.3.61"

# database
## Figure out best place to store the db and stdlib files
directories = "5"

rusqlite = { version = "0", optional = true, features = ["uuid", "bundled"] }

# memoized functions
once_cell = "1"

# The blob cache
cache = {path = "./cache"}

# Android
# android logging
libc = "0.2"
jni = "0.21"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
#chrono = "0.4.31"

[dev-dependencies]
test-case = "2"

[build-dependencies]
directories = "5"
sha2 = "0"
base64 = "0.22"
cache = {path = "./cache"}

[features]
database = ["rusqlite"]

[lib]
name = "kcats"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "kcats_executable"
path = "src/main.rs"