[package]
name = "kcats"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
rand_core = "0.5.1"
rand = "0.8.5"

[dependencies]
# immutable data structures
im = "15.1"

# serialization
edn-format = {path = "./edn-format"}
serde = "1"
serde_json = "1"

base64 = "0.22"

# String literals
internment = {version = "0.6.0", features = ["serde"]}
lazy_static = "1"

num-integer = "0"

# String format
dynfmt = { version = "0", features = ["curly"] }

# crypto stuff
ed25519-dalek = {version="1", features=["batch_deterministic", "std", "rand"]}
sha2 = {version="0", features=["std"]}
rand_core.workspace = true
rand.workspace = true

# multithreading
futures = "0"
tokio = { version = "1", features = ["full"] }
# multiple-consumer channels
flume = "0"

# debugging
# backtrace = "0.3.61"

# database
## Figure out best place to store the db and stdlib files
directories = "5"

rusqlite = { version = "0", optional = true, features = ["uuid", "bundled"] }

# memoized functions
once_cell = "1"

# The blob cache
cache = {path = "./cache"}

# Android
# android logging
libc = "0.2"
jni = "0.21"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
#chrono = "0.4.31"

[dev-dependencies]
test-case = "2"

[build-dependencies]
directories = "5"
sha2 = "0"
base64 = "0.22"
cache = {path = "./cache"}
edn-format  = {path = "./edn-format"}

[features]
database = ["rusqlite"]

[lib]
name = "kcats"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "kcats"
path = "src/main.rs"
